# KalaTestProject

./: .gitignore  CMakeLists.txt  LIBRARIES.md  LICENSE.md  README.md  build_all.bat  build_all_linux.sh  build_all_windows.bat
_external_shared/: copy_linux.sh  copy_windows.bat
_external_shared/KalaCrashHandler/: CHANGES.txt
_external_shared/KalaWindow/: CHANGES.txt  README.md  freetype.hpp
_external_shared/KalaWindow/debug/: KalaWindowD.lib
_external_shared/KalaWindow/release/: KalaWindow.lib
_external_shared/KalaWindow/wayland/: platform_wayland.hpp
_external_shared/KalaWindow/windows/: platform_windows.hpp
_external_shared/KalaWindow/x11/: platform_x11.hpp
files/shaders/: tri.frag
include/: core.hpp
include/core/: core.hpp
include/graphics/: renderprogram.hpp  triangle.hpp
src/: core.cpp  main.cpp
src/core/: core.cpp
src/graphics/: render_opengl.cpp  render_vulkan.cpp  triangle.cpp
